--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fullcalendar/interaction": "^6.1.20",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
-    "fullcalendar": "^6.1.20"
+    "bootstrap-icons": "^1.13.1",
+    "fullcalendar": "^6.1.20",
+    "notyf": "^3.10.0"
   }
 }
