fix netlify 404 page add robot.txt & sitemap.xml files

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   publish = "dist"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/robots.txt"
+  to = "/robots.txt"
   status = 200
+
